backend: added listRewards to list all rewards for specific users, modified user-service yaml to include new endpoint only for admin,frontend:  added susbscription panel with path for the user on profile page so he can claim a reward, added trophy colum on admin panel subscription so admin user can see claimed rewards on page
